# shrink-wrap

./: .dockerignore  Dockerfile  LICENSE  README.md  bot.py  bot_limits.py  chat_storage.py  config.py  gpt.py  logger.py  main.py  pyproject.toml  system_prompts.py  telegram_message.py
